--- a/PageAnalyzerNET/Views/Url/Show.cshtml
+++ b/PageAnalyzerNET/Views/Url/Show.cshtml
@@ -22,8 +22,8 @@
     <form asp-action="CheckUrl" asp-controller="Url" asp-route-id="@Model.Id">
         <button type="submit" class="btn btn-primary">Запустить проверку</button>
     </form>
-    <table class="table table-bordered table-hover mt-3">
-        <thead>
+    <table class="table table-bordered table-hover mt-3 mb-3">
+        <thead class="table-light">
         <tr>
             <th class="col-1">ID</th>
             <th class="col-1">Код ответа</th>
