--- a/PageAnalyzerNET/Views/Shared/_Layout.cshtml
+++ b/PageAnalyzerNET/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
         </div>
     </nav>
 </header>
-<main class="flex-grow-1">
+<main class="flex-grow-1 mb-5">
     @if (Context.Session.Keys.Contains("flash") && Context.Session.Keys.Contains("flash-type"))
     {
         <div class='rounded-0 m-0 alert alert-dismissible fade show alert-@Context.Session.GetString("flash-type")'
